syntax = "proto3";

package gogorpc.proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/let-z-go/gogorpc/internal/proto/uuid.proto";

option go_package = "github.com/let-z-go/gogorpc/internal/proto";
option (gogoproto.goproto_enum_prefix_all) = false;

enum EventType {
    EVENT_KEEPALIVE = 0;
    EVENT_REQUEST = 1;
    EVENT_RESPONSE = 2;
    EVENT_HANGUP = 3;
}

message TransportHandshakeHeader {
    UUID id = 1 [ (gogoproto.nullable) = false ];
    int32 max_incoming_packet_size = 2;
    int32 max_outgoing_packet_size = 3;
}

message PacketHeader {
    EventType event_type = 1;
}
